package crypto.pb;

enum KeyType {
	RSA = 0;
}

message PBPublicKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message PBPrivateKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}
